@startuml cinema

class Filme {
    - id Int
    - titulo_filme String
    - ano Int
    - duracao Int
    - descricao_filme String
    - faixa_etaria Int
    - diretor String
    - avaliacao_geral String
    - categoria Categoria
    - genero Genero
    + constructor (titulo_filme, ano, duracao, descricao_filme, faixa_etaria, diretor, avaliacao_geral, categoria, genero)
}

class Pessoa {
    - id Int
    - nome String
    - sobrenome String
    # cpf Int
    - idade Int
    - dataNascimento Date
    + constructor (nome, sobrenome, cpf, idade, dataNascimento)
}

class Categoria {
    - id Int
    - titulo_categoria String
    - descricao_categoria String
    + constructor (titulo_categoria, descricao_categoria)
}

class Genero {
    - id Int
    - nome_genero String
    - descricao_genero String
    + constructor (nome_genero, descricao_genero)
}

class Ingresso {
    - id Int
    - assento Sala
    - sessao Sessao
    - pessoa Pessoa
    + constructor (nome_comprador, idade_comprador, documento_comprador, assento, sessao, pessoa)
}

class Sala {
    - id Int
    - numero_sala Int
    - assentos Int
    - tipo_sala String
    + constructor (numero_sala, assentos, tipo_sala)
}

class Sessao {
    - id Int
    - horario Date
    - filme Filme
    - sala Sala
    + constructor (horario, filme, sala)
}

Filme *-- Categoria
Filme *-- Genero

Sala --* Sessao

Sessao *-- Filme

Pessoa --* Ingresso

Ingresso *-- Sala

@enduml